--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1603,7 +1603,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #787878;
+		color: #0A0A0A;
 		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
