--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,5 +1,5 @@
 ﻿form {
-    font-family: arial, helvetica, sans-serif;
+    font-family: arial, helvetica, sans-serif, 'Copperplate Gothic';
     background: silver;
     padding: 15px;
     border-radius: 10px;
@@ -12,6 +12,7 @@
     width: 172px;
     height: 33px;
     font-weight: bold;
+    font-family: 'Copperplate Gothic'
     cursor: pointer;
 }
 
